--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,12 @@
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
 
-    <string name="navigation_item_2">Coinbase new</string>
-    <string name="navigation_item_3">CoinMarketCap</string>
+    <string name="navigation_item_1">Coinbase</string>
+    <string name="navigation_item_2">CoinMarketCap</string>
 
     <!-- Label degli item del navigation drawer -->
     <string-array name="navigation_drawer_labels">
+        <item>@string/navigation_item_1</item>
         <item>@string/navigation_item_2</item>
-        <item>@string/navigation_item_3</item>
     </string-array>
 </resources>
