--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,12 @@
 
     <string name="navigation_item_1">Coinbase</string>
     <string name="navigation_item_2">CoinMarketCap</string>
+    <string name="navigation_item_3">Graph</string>
 
     <!-- Label degli item del navigation drawer -->
     <string-array name="navigation_drawer_labels">
         <item>@string/navigation_item_1</item>
         <item>@string/navigation_item_2</item>
+        <item>@string/navigation_item_3</item>
     </string-array>
 </resources>
